# pi-gui-rs

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: inspect_session.py
src/: App.tsx  ambient-stub.ts  composer-attachments.ts  composer-commands.ts  conversation-timeline.tsx  dev-reload-hook.ts  dev-reload-probe.tsx  dialog-focus.ts  diff-inline.tsx  diff-panel.tsx  extension-display.tsx  extension-session-ui.tsx  fork-modal.tsx  global.d.ts  highlight-js-legacy.d.ts  icons.tsx  ipc.ts  main.tsx  model-onboarding.ts  model-settings.ts  queued-composer-messages.tsx  reviewed-files-store.ts  sdk-types.ts  secondary-surface.tsx  settings-custom-endpoints-section.tsx  settings-general-section.tsx  settings-models-section.tsx  settings-notifications-section.tsx  settings-utils.tsx  settings-view.tsx  sidebar-toggle-button.tsx  styles.css  syntax-highlight.ts  tauri-adapter.ts  terminal-model.ts  theme-presets.ts  thread-groups.ts  timeline-item.tsx  tree-modal.tsx  workspace-context.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs  store.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/state/: extensions.rs  internal.rs  persistence.rs  providers.rs  runtime.rs  session.rs  skills.rs  store.rs
src-tauri/src/store/: internal.rs  model.rs  persistence.rs  session.rs  workspace.rs
src/api/: commands.ts  events.ts
src/components/: AppShell.tsx  ChatView.tsx  ConversationSidebar.tsx  ModelsSettings.tsx  PiSidebar.tsx  PickModel.tsx  SettingsView.tsx
(+17 files in other folders)
